; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ocfs2/extr_journal.c_ocfs2_journal_access_dl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ocfs2/extr_journal.c_ocfs2_journal_access_dl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ocfs2_caching_info = type { i32 }
%struct.buffer_head = type { i32 }

@dl_triggers = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ocfs2_journal_access_dl(i32* %0, %struct.ocfs2_caching_info* %1, %struct.buffer_head* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.ocfs2_caching_info*, align 8
  %7 = alloca %struct.buffer_head*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.ocfs2_caching_info* %1, %struct.ocfs2_caching_info** %6, align 8
  store %struct.buffer_head* %2, %struct.buffer_head** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = load %struct.ocfs2_caching_info*, %struct.ocfs2_caching_info** %6, align 8
  %11 = load %struct.buffer_head*, %struct.buffer_head** %7, align 8
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @__ocfs2_journal_access(i32* %9, %struct.ocfs2_caching_info* %10, %struct.buffer_head* %11, i32* @dl_triggers, i32 %12)
  ret i32 %13
}

declare dso_local i32 @__ocfs2_journal_access(i32*, %struct.ocfs2_caching_info*, %struct.buffer_head*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
